# tellme

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  MBA.md  PLAN.md  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
docs/: anchors.md
src/: blame.rs  cli.rs  completion.rs  config.rs  error.rs  git.rs  graph.rs  journey.rs  lib.rs  lineref.rs  main.rs  paths.rs  reconcile.rs  tui.rs
src/analysis/: mod.rs  python.rs
src/capture/: mod.rs  ranges.rs
src/commands/: capture.rs  decision.rs  flow.rs  hook.rs  init.rs  journey.rs  mod.rs  prompt.rs  reconcile.rs  why.rs
src/store/: blobs.rs  mod.rs  models.rs  schema.rs
