[package]
name = "tellme"
version = "0.1.0"
edition = "2021"
description = "Git blame, but for prompts and decisions — a Rust CLI that captures the intent behind AI-generated code."
license = "MIT"
repository = "https://github.com/dhruva-nu/tellme"
readme = "README.md"
keywords = ["cli", "documentation", "git", "ai", "provenance"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tellme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
