[package]
name = "tellme"
version = "0.1.0"
edition = "2021"
description = "Git blame, but for prompts and decisions — a Rust CLI that captures the intent behind AI-generated code."
license = "MIT"
repository = "https://github.com/dhruva-nu/tellme"
readme = "README.md"
keywords = ["cli", "documentation", "git", "ai", "provenance"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tellme"
path = "src/lib.rs"

[[bin]]
name = "tellme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.19", default-features = false }
sha2 = "0.10"
tree-sitter = "0.22"
tree-sitter-python = "0.21"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
